--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,22 @@
-title = "Adrien Lemaire's site"
-# replace the url below with yours
-base_url = "https://example.com"
+# mandatory
+title = "Adrien Lemaire"
+base_url = "https://adrien.is"
+
+# Other options
+highlight_code = true
+highlight_theme = "solarized-dark"
+language_code = "en"
+generate_rss = true
+generate_tags_pages = false
+generate_categories_pages = false
+insert_anchor_links = true
+
 
 [extra]
-# Put all your custom variables here
+author = "Adrien Lemaire"
+email = "lemaire.adrien@gmail.com"
+description = "Full stack software engineer writing about anything"
+google_analytics = 'UA-65364287-1'
+github = "Fandekasp"
+linkedin = "adrienlemaire"
+twitter = "Fandekasp"
