set sass theme with solarized flavor

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # mandatory
 title = "Adrien Lemaire"
-base_url = "https://adrien.is"
+base_url = "https://adrien.is/"
 
 # Other options
 highlight_code = true
