--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
     "lost": "^7.1.0"
+  },
+  "dependencies": {
+    "gutenberg-web-type": "^1.2.3",
+    "normalize-scss": "^6.0.0"
   }
 }
-
